# versus-smart-contract

./: .gitignore  Cargo.toml
implementation/: Cargo.toml
implementation/src/: lib.rs
proxy/: Cargo.toml  get_player_data_param.json  init_param.json
proxy/src/: lib.rs
state/: Cargo.toml  initialize_param.json
state/src/: lib.rs
