# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "state"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "root" ]
description = "The state for versus smart contract"

[dependencies]
concordium-std = "4.0.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
